--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /.vs/MSSQLDatabase/FileContentIndex
+/MSSQLDatabase/MSSQLDatabase.jfm
+/.vs/MSSQLDatabase/v17
